# idea-validator

./: CLAUDE.md  pyproject.toml
src/idea_parser/: __init__.py  __main__.py  parser.py
src/idea_validator/: __init__.py  __main__.py  parser.py
