[project]
name = "idea-validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "azakharchuk", email = "andriyzakharchuk402@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
idea-validator = "idea_validator:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"  
